2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.
	* lib/groupio.h: Add protection against multiple inclusion.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetgrent.c: implicit conversion of pointers / chars to
	booleans.
	* lib/sgetgrent.c: Avoid assignments in comparisons.
	* lib/sgetgrent.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/encrypt.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/encrypt.c: Add parenthesis.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/port.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.
	* lib/port.c: Avoid multiple statement on the same line.
	* lib/port.c: Add brackets and parenthesis.
	* lib/port.c: Avoid assignments in comparisons.
	* lib/port.c: Fix typo comparision -> comparison (in comment).

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/fputsx.c: Add brackets.
	* lib/fputsx.c: Avoid assignments in comparisons.
	* lib/fputsx.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h: commonio_entry.changed, commonio_db.changed,
	commonio_db.isopen, commonio_db.locked, and commonio_db.readonly
	are no booleans.
	* lib/commonio.h: Include defines.h to get the definition of bool.
	* lib/commonio.h: commonio_present returns a bool
	* lib/commonio.c: Implement above changes.
	* lib/commonio.c: add argument names in prototypes.
	* lib/commonio.c: name_is_nis returns a bool.
	* lib/commonio.c: nscd_need_reload is a bool.
	* lib/commonio.c: Improve types (use size_t / pid_t when needed
	instead of int).
	* lib/commonio.c: Avoid assignments in comparisons.
	* lib/commonio.c: Add brackets and parenthesis.